--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="./access/css/style.css">
 </head>
 
-<body>
+<body style="height: 3000px;">
     <!--=====================================
     =                General                =
     ======================================-->
@@ -36,21 +36,21 @@
             </div>
             <div class="general__content">
                 <div class="row">
-                    <div class="general__content__col--edit col-12">
+                    <div class="general__content__col--edit col-12 col-md-5">
                         <div class=" general__image">
                             <img class="img-fluid" src="./access/image/women.jpg" alt="women">
                         </div>
                     </div>
-                    <div class="general__content__col--edit col-12">
+                    <div class="general__content__col--edit col-12 col-md-7">
                         <div class="general__list">
                             <ul>
                                 <li>
                                     <class class="card">
                                         <input type="checkbox" id="subject1" name="subject">
                                         <label class="card-body" for="subject1">
-                                            <div class="general__list__title">There are many passages but the majority?
+                                            <div class="general__list__header">There are many passages but the majority?
                                             </div>
-                                            <div class="general__list__content">Voluptates amet earum velit nobis
+                                            <div class="general__list__text">Voluptates amet earum velit nobis
                                                 aliquam
                                                 laboriosam nihil debitis facere voluptatibus consectetur quae quasi
                                                 fuga, ad
@@ -64,10 +64,10 @@
                                     <div class="card">
                                         <input type="checkbox" id="subject2" name="subject">
                                         <label class="card-body" for="subject2">
-                                            <div class="general__list__title">
+                                            <div class="general__list__header">
                                                 Sed ut perspiciatis unde omnis?
                                             </div>
-                                            <div class="general__list__content">Voluptates amet earum velit nobis
+                                            <div class="general__list__text">Voluptates amet earum velit nobis
                                                 aliquam
                                                 laboriosam nihil debitis facere voluptatibus consectetur quae quasi
                                                 fuga, ad
@@ -82,10 +82,10 @@
                                     <div class="card">
                                         <input type="checkbox" id="subject3" name="subject">
                                         <label class="card-body" for="subject3">
-                                            <div class="general__list__title">
+                                            <div class="general__list__header">
                                                 At vero eos iusto odio ducimus qui?
                                             </div>
-                                            <div class="general__list__content">Voluptates amet earum velit nobis
+                                            <div class="general__list__text">Voluptates amet earum velit nobis
                                                 aliquam
                                                 laboriosam nihil debitis facere voluptatibus consectetur quae quasi
                                                 fuga, ad
@@ -99,10 +99,10 @@
                                     <div class="card">
                                         <input type="checkbox" id="subject4" name="subject">
                                         <label class="card-body" for="subject4">
-                                            <div class="general__list__title">
+                                            <div class="general__list__header">
                                                 We denounce with righteous?
                                             </div>
-                                            <div class="general__list__content">Voluptates amet earum velit nobis
+                                            <div class="general__list__text">Voluptates amet earum velit nobis
                                                 aliquam
                                                 laboriosam nihil debitis facere voluptatibus consectetur quae quasi
                                                 fuga, ad
@@ -116,10 +116,10 @@
                                     <div class="card">
                                         <input type="checkbox" id="subject5" name="subject">
                                         <label class="card-body" for="subject5">
-                                            <div class="general__list__title">
+                                            <div class="general__list__header">
                                                 perspiciatis unde omnis?
                                             </div>
-                                            <div class="general__list__content">Voluptates amet earum velit nobis
+                                            <div class="general__list__text">Voluptates amet earum velit nobis
                                                 aliquam
                                                 laboriosam nihil debitis facere voluptatibus consectetur quae quasi
                                                 fuga, ad
@@ -133,10 +133,10 @@
                                     <div class="card">
                                         <input type="checkbox" id="subject6" name="subject">
                                         <label class="card-body" for="subject6">
-                                            <div class="general__list__title">
+                                            <div class="general__list__header">
                                                 At vero eos iusto odio ducimus qui?
                                             </div>
-                                            <div class="general__list__content">Voluptates amet earum velit nobis
+                                            <div class="general__list__text">Voluptates amet earum velit nobis
                                                 aliquam
                                                 laboriosam nihil debitis facere voluptatibus consectetur quae quasi
                                                 fuga, ad
