--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     <link rel="stylesheet" href="./access/css/style.css">
 </head>
 
-<body style="height: 3000px;">
+<body>
     <!--=====================================
     =                General                =
     ======================================-->
     <section class="general">
         <div class="container">
-            <div class="general__title">
+            <div class="__title">
                 <h3>QUESTIONS AND ANSWERS</h3>
                 <h2>General FAQs</h2>
                 <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla mollis
@@ -157,7 +157,70 @@
     <!--=====================================
     =                Featured                =
     ======================================-->
-    <section class="featured"></section>
+    <section class="featured">
+        <div class="container">
+            <div class="__title">
+                <h3>Featured Cases </h3>
+                <h2>Completed Projects </h2>
+                <p>
+                    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
+                    Nulla mollis dapibus nunc, ut rhoncus turpis sodales quis. Integer sit amet mattis quam.
+                </p>
+            </div>
+            <div class="featured__content">
+                <div class="featured__tabs">
+                    <input type="radio" id="project1" name="projects">
+                    <label for="project1">Project One</label>
+                    <div>
+                        <h2>
+                            Why a visual identity system is more memorable
+                        </h2>
+                        <p>
+                            Lorem ipsum dolor sit, adipisicing elit repudiandae perferendis dolores praesentium nulla
+                            quibusdam repellendus. consequatur minus aliquam corrupti blanditiis, necessitatibus
+                            consectetur modi ipsum natus accusantium sit pariatur.
+                        </p>
+                        <button>
+                            Know more
+                        </button>
+                        <img class="img-fluid" src="./access/image/b4.jpg" alt="b4">
+                    </div>
+                    <input type="radio" id="project2" name="projects">
+                    <label for="project2">Project Two</label>
+                    <div>
+                        <img class="img-fluid" src="./access/image/b5.jpg" alt="b5">
+                        <h2>
+                            Make website that looks Lorem, ipsum dolor.
+                        </h2>
+                        <p>
+                            Lorem ipsum dolor sit, adipisicing elit repudiandae perferendis dolores praesentium nulla
+                            quibusdam repellendus. consequatur minus aliquam corrupti blanditiis, necessitatibus
+                            consectetur modi ipsum natus accusantium sit pariatur.
+                        </p>
+                        <button>
+                            Know more
+                        </button>
+                    </div>
+                    <input type="radio" id="project3" name="projects">
+                    <label for="project3">Project Three</label>
+                    <div>
+                        <h2>
+                            Why a visual identity system is more memorable
+                        </h2>
+                        <p>
+                            Lorem ipsum dolor sit, adipisicing elit repudiandae perferendis dolores praesentium nulla
+                            quibusdam repellendus. consequatur minus aliquam corrupti blanditiis, necessitatibus
+                            consectetur modi ipsum natus accusantium sit pariatur.
+                        </p>
+                        <button>
+                            Know more
+                        </button>
+                        <img class="img-fluid" src="./access/image/b6.jpg" alt="b6">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!--=======  End of Featured  ========-->
     <!--=====================================
     =                Feedback                =
