--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="./access/css/style.css">
 </head>
 
-<body>
+<body style="height: 5000px;">
     <!--=====================================
     =                General                =
     ======================================-->
@@ -170,49 +170,68 @@
             <div class="featured__content">
                 <div class="featured__tabs">
                     <input type="radio" id="project1" name="projects">
-                    <label for="project1">Project One</label>
+                    <label for="project1">
+                        <div class="featured__tab-header">
+                            <p>Project One</p>
+                            <span></span>`
+                        </div>
+                    </label>
                     <div>
                         <h2>
                             Why a visual identity system is more memorable
                         </h2>
                         <p>
-                            Lorem ipsum dolor sit, adipisicing elit repudiandae perferendis dolores praesentium nulla
+                            Lorem ipsum dolor sit, adipisicing elit repudiandae perferendis dolores praesentium
+                            nulla
                             quibusdam repellendus. consequatur minus aliquam corrupti blanditiis, necessitatibus
                             consectetur modi ipsum natus accusantium sit pariatur.
                         </p>
-                        <button>
+                        <button class="btn btn-outline-primary theme-button">
                             Know more
                         </button>
                         <img class="img-fluid" src="./access/image/b4.jpg" alt="b4">
                     </div>
                     <input type="radio" id="project2" name="projects">
-                    <label for="project2">Project Two</label>
+                    <label for="project2">
+                        <div class="featured__tab-header">
+                            <p>Project Two</p>
+                            <span></span>
+                        </div>
+                    </label>
                     <div>
                         <img class="img-fluid" src="./access/image/b5.jpg" alt="b5">
                         <h2>
                             Make website that looks Lorem, ipsum dolor.
                         </h2>
                         <p>
-                            Lorem ipsum dolor sit, adipisicing elit repudiandae perferendis dolores praesentium nulla
+                            Lorem ipsum dolor sit, adipisicing elit repudiandae perferendis dolores praesentium
+                            nulla
                             quibusdam repellendus. consequatur minus aliquam corrupti blanditiis, necessitatibus
                             consectetur modi ipsum natus accusantium sit pariatur.
                         </p>
-                        <button>
+                        <button class="btn btn-outline-primary theme-button">
                             Know more
                         </button>
                     </div>
                     <input type="radio" id="project3" name="projects">
-                    <label for="project3">Project Three</label>
+                    <label for="project3">
+                        <div class="featured__tab-header">
+                            <p>Project Three</p>
+                            <span></span>
+                        </div>
+                    </label>
+                    </label>
                     <div>
                         <h2>
                             Why a visual identity system is more memorable
                         </h2>
                         <p>
-                            Lorem ipsum dolor sit, adipisicing elit repudiandae perferendis dolores praesentium nulla
+                            Lorem ipsum dolor sit, adipisicing elit repudiandae perferendis dolores praesentium
+                            nulla
                             quibusdam repellendus. consequatur minus aliquam corrupti blanditiis, necessitatibus
                             consectetur modi ipsum natus accusantium sit pariatur.
                         </p>
-                        <button>
+                        <button class="btn btn-outline-primary theme-button">
                             Know more
                         </button>
                         <img class="img-fluid" src="./access/image/b6.jpg" alt="b6">
