--- a/index.html
+++ b/index.html
@@ -173,23 +173,33 @@
                     <label for="project1">
                         <div class="featured__tab-header">
                             <p>Project One</p>
-                            <span></span>`
+                            <span></span>
                         </div>
                     </label>
                     <div>
-                        <h2>
-                            Why a visual identity system is more memorable
-                        </h2>
-                        <p>
-                            Lorem ipsum dolor sit, adipisicing elit repudiandae perferendis dolores praesentium
-                            nulla
-                            quibusdam repellendus. consequatur minus aliquam corrupti blanditiis, necessitatibus
-                            consectetur modi ipsum natus accusantium sit pariatur.
-                        </p>
-                        <button class="btn btn-outline-primary theme-button">
-                            Know more
-                        </button>
-                        <img class="img-fluid" src="./access/image/b4.jpg" alt="b4">
+                        <div class="container-fluid featured__tab-item--edit">
+                            <div class="row">
+                                <div class="col-12 col-md-6">
+                                    <h2>
+                                        Why a visual identity system is more memorable
+                                    </h2>
+                                    <p>
+                                        Lorem ipsum dolor sit, adipisicing elit repudiandae perferendis dolores
+                                        praesentium
+                                        nulla
+                                        quibusdam repellendus. consequatur minus aliquam corrupti blanditiis,
+                                        necessitatibus
+                                        consectetur modi ipsum natus accusantium sit pariatur.
+                                    </p>
+                                    <button class="btn btn-outline-primary theme-button">
+                                        Know more
+                                    </button>
+                                </div>
+                                <div class="col-12 col-md-6">
+                                    <img class="img-fluid" src="./access/image/b4.jpg" alt="b4">
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <input type="radio" id="project2" name="projects">
                     <label for="project2">
@@ -199,19 +209,29 @@
                         </div>
                     </label>
                     <div>
-                        <img class="img-fluid" src="./access/image/b5.jpg" alt="b5">
-                        <h2>
-                            Make website that looks Lorem, ipsum dolor.
-                        </h2>
-                        <p>
-                            Lorem ipsum dolor sit, adipisicing elit repudiandae perferendis dolores praesentium
-                            nulla
-                            quibusdam repellendus. consequatur minus aliquam corrupti blanditiis, necessitatibus
-                            consectetur modi ipsum natus accusantium sit pariatur.
-                        </p>
-                        <button class="btn btn-outline-primary theme-button">
-                            Know more
-                        </button>
+                        <div class="container-fluid featured__tab-item--edit">
+                            <div class="row">
+                                <div class="col-12 col-md-6">
+                                    <img class="img-fluid" src="./access/image/b5.jpg" alt="b5">
+                                </div>
+                                <div class="col-12 col-md-6">
+                                    <h2>
+                                        Make website that looks Lorem, ipsum dolor.
+                                    </h2>
+                                    <p>
+                                        Lorem ipsum dolor sit, adipisicing elit repudiandae perferendis dolores
+                                        praesentium
+                                        nulla
+                                        quibusdam repellendus. consequatur minus aliquam corrupti blanditiis,
+                                        necessitatibus
+                                        consectetur modi ipsum natus accusantium sit pariatur.
+                                    </p>
+                                    <button class="btn btn-outline-primary theme-button">
+                                        Know more
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <input type="radio" id="project3" name="projects">
                     <label for="project3">
@@ -220,21 +240,32 @@
                             <span></span>
                         </div>
                     </label>
-                    </label>
                     <div>
-                        <h2>
-                            Why a visual identity system is more memorable
-                        </h2>
-                        <p>
-                            Lorem ipsum dolor sit, adipisicing elit repudiandae perferendis dolores praesentium
-                            nulla
-                            quibusdam repellendus. consequatur minus aliquam corrupti blanditiis, necessitatibus
-                            consectetur modi ipsum natus accusantium sit pariatur.
-                        </p>
-                        <button class="btn btn-outline-primary theme-button">
-                            Know more
-                        </button>
-                        <img class="img-fluid" src="./access/image/b6.jpg" alt="b6">
+
+                        <div class="container-fluid featured__tab-item--edit">
+                            <div class="row">
+                                <div class="col-12 col-md-6">
+                                    <h2>
+                                        Why a visual identity system is more memorable
+                                    </h2>
+                                    <p>
+                                        Lorem ipsum dolor sit, adipisicing elit repudiandae perferendis dolores praesentium
+                                        nulla
+                                        quibusdam repellendus. consequatur minus aliquam corrupti blanditiis, necessitatibus
+                                        consectetur modi ipsum natus accusantium sit pariatur.
+                                    </p>
+                                    <button class="btn btn-outline-primary theme-button">
+                                        Know more
+                                    </button>
+                                </div>
+                                <div class="col-12 col-md-6">
+                                    <img class="img-fluid" src="./access/image/b6.jpg" alt="b6">
+                                </div>
+                            </div>
+                        </div>
+
+                        
+                        
                     </div>
                 </div>
             </div>
