--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     =                Featured                =
     ======================================-->
     <section class="featured">
-        <div class="container">
+        <div class="container featured__container--edit">
             <div class="__title">
                 <h3>Featured Cases </h3>
                 <h2>Completed Projects </h2>
@@ -241,7 +241,6 @@
                         </div>
                     </label>
                     <div>
-
                         <div class="container-fluid featured__tab-item--edit">
                             <div class="row">
                                 <div class="col-12 col-md-6">
@@ -249,9 +248,11 @@
                                         Why a visual identity system is more memorable
                                     </h2>
                                     <p>
-                                        Lorem ipsum dolor sit, adipisicing elit repudiandae perferendis dolores praesentium
+                                        Lorem ipsum dolor sit, adipisicing elit repudiandae perferendis dolores
+                                        praesentium
                                         nulla
-                                        quibusdam repellendus. consequatur minus aliquam corrupti blanditiis, necessitatibus
+                                        quibusdam repellendus. consequatur minus aliquam corrupti blanditiis,
+                                        necessitatibus
                                         consectetur modi ipsum natus accusantium sit pariatur.
                                     </p>
                                     <button class="btn btn-outline-primary theme-button">
@@ -263,9 +264,6 @@
                                 </div>
                             </div>
                         </div>
-
-                        
-                        
                     </div>
                 </div>
             </div>
@@ -275,7 +273,110 @@
     <!--=====================================
     =                Feedback                =
     ======================================-->
-    <section class="feedback"></section>
+    <section class="feedback">
+        <div class="container">
+            <div class="__title">
+                <h3>Our Clients Testimonials </h3>
+                <h2>What People Say</h2>
+                <p>
+                    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
+                    Nulla mollis dapibus nunc, ut rhoncus turpis sodales quis. Integer sit amet mattis quam.
+                </p>
+            </div>
+        </div>
+        <div class="feedback__content">
+            <div id="carouselFeedbackIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselFeedbackIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselFeedbackIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselFeedbackIndicators" data-slide-to="2"></li>
+                </ol>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div feedback__carousel-item__content>
+                        <i class="fa-solid fa-quote-left"></i>
+                        <div class="feedback__carousel-item__content__img">
+                            <img src="./access/image/team3.jpg" class="d-block w-100" alt="error">
+                        </div>
+                        <div class="feedback__carousel-item__content__text">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda corporis deleniti
+                                praesentium doloremque. Repellendus soluta quos nemo quisquam consectetur temporibus
+                                quam obcaecati sapiente quaerat et.
+                            </p>
+                            <h4>
+                                Isabella Mia
+                            </h4>
+                            <small>
+                                Company name
+                            </small>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div feedback__carousel-item__content>
+                        <i class="fa-solid fa-quote-left"></i>
+                        <div class="feedback__carousel-item__content__img">
+                            <img src="./access/image/team4.jpg" class="d-block w-100" alt="error">
+                        </div>
+                        <div class="feedback__carousel-item__content__text">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda corporis deleniti
+                                praesentium doloremque. Repellendus soluta quos nemo quisquam consectetur temporibus
+                                quam obcaecati sapiente quaerat et.
+                            </p>
+                            <h4>
+                                Benjamin Lucas
+                            </h4>
+                            <small>
+                                Company name
+                            </small>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div feedback__carousel-item__content>
+                        <i class="fa-solid fa-quote-left"></i>
+                        <div class="feedback__carousel-item__content__img">
+                            <img src="./access/image/team5.jpg" class="d-block w-100" alt="error">
+                        </div>
+                        <div class="feedback__carousel-item__content__text">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda corporis deleniti
+                                praesentium doloremque. Repellendus soluta quos nemo quisquam consectetur temporibus
+                                quam obcaecati sapiente quaerat et.
+                            </p>
+                            <h4>Oliver Bradley</h4>
+                            <small>
+                                Company name
+                            </small>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div feedback__carousel-item__content>
+                        <i class="fa-solid fa-quote-left"></i>
+                        <div class="feedback__carousel-item__content__img">
+                            <img src="./access/image/team6.jpg" class="d-block w-100" alt="error">
+                        </div>
+                        <div class="feedback__carousel-item__content__text">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda corporis deleniti
+                                praesentium doloremque. Repellendus soluta quos nemo quisquam consectetur temporibus
+                                quam obcaecati sapiente quaerat et.
+                            </p>
+                            <h4>William James</h4>
+                            <small>
+                                Company name
+                            </small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
     <!--=======  End of Feedback  ========-->
     <!--=====================================
     =                Build                =
