--- a/index.html
+++ b/index.html
@@ -291,85 +291,85 @@
                     <li data-target="#carouselFeedbackIndicators" data-slide-to="1"></li>
                     <li data-target="#carouselFeedbackIndicators" data-slide-to="2"></li>
                 </ol>
-            </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <div feedback__carousel-item__content>
-                        <i class="fa-solid fa-quote-left"></i>
-                        <div class="feedback__carousel-item__content__img">
-                            <img src="./access/image/team3.jpg" class="d-block w-100" alt="error">
-                        </div>
-                        <div class="feedback__carousel-item__content__text">
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda corporis deleniti
-                                praesentium doloremque. Repellendus soluta quos nemo quisquam consectetur temporibus
-                                quam obcaecati sapiente quaerat et.
-                            </p>
-                            <h4>
-                                Isabella Mia
-                            </h4>
-                            <small>
-                                Company name
-                            </small>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div feedback__carousel-item__content>
-                        <i class="fa-solid fa-quote-left"></i>
-                        <div class="feedback__carousel-item__content__img">
-                            <img src="./access/image/team4.jpg" class="d-block w-100" alt="error">
-                        </div>
-                        <div class="feedback__carousel-item__content__text">
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda corporis deleniti
-                                praesentium doloremque. Repellendus soluta quos nemo quisquam consectetur temporibus
-                                quam obcaecati sapiente quaerat et.
-                            </p>
-                            <h4>
-                                Benjamin Lucas
-                            </h4>
-                            <small>
-                                Company name
-                            </small>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div feedback__carousel-item__content>
+                            <i class="fa-solid fa-quote-left"></i>
+                            <div class="feedback__carousel-item__content__img">
+                                <img src="./access/image/team3.jpg" class="img-fluid" alt="error">
+                            </div>
+                            <div class="feedback__carousel-item__content__text">
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda corporis deleniti
+                                    praesentium doloremque. Repellendus soluta quos nemo quisquam consectetur temporibus
+                                    quam obcaecati sapiente quaerat et.
+                                </p>
+                                <h4>
+                                    Isabella Mia
+                                </h4>
+                                <small>
+                                    Company name
+                                </small>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="carousel-item">
-                    <div feedback__carousel-item__content>
-                        <i class="fa-solid fa-quote-left"></i>
-                        <div class="feedback__carousel-item__content__img">
-                            <img src="./access/image/team5.jpg" class="d-block w-100" alt="error">
-                        </div>
-                        <div class="feedback__carousel-item__content__text">
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda corporis deleniti
-                                praesentium doloremque. Repellendus soluta quos nemo quisquam consectetur temporibus
-                                quam obcaecati sapiente quaerat et.
-                            </p>
-                            <h4>Oliver Bradley</h4>
-                            <small>
-                                Company name
-                            </small>
+                    <div class="carousel-item">
+                        <div feedback__carousel-item__content>
+                            <i class="fa-solid fa-quote-left"></i>
+                            <div class="feedback__carousel-item__content__img">
+                                <img src="./access/image/team4.jpg" class="d-block w-100" alt="error">
+                            </div>
+                            <div class="feedback__carousel-item__content__text">
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda corporis deleniti
+                                    praesentium doloremque. Repellendus soluta quos nemo quisquam consectetur temporibus
+                                    quam obcaecati sapiente quaerat et.
+                                </p>
+                                <h4>
+                                    Benjamin Lucas
+                                </h4>
+                                <small>
+                                    Company name
+                                </small>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="carousel-item">
-                    <div feedback__carousel-item__content>
-                        <i class="fa-solid fa-quote-left"></i>
-                        <div class="feedback__carousel-item__content__img">
-                            <img src="./access/image/team6.jpg" class="d-block w-100" alt="error">
+                    <div class="carousel-item">
+                        <div feedback__carousel-item__content>
+                            <i class="fa-solid fa-quote-left"></i>
+                            <div class="feedback__carousel-item__content__img">
+                                <img src="./access/image/team5.jpg" class="d-block w-100" alt="error">
+                            </div>
+                            <div class="feedback__carousel-item__content__text">
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda corporis deleniti
+                                    praesentium doloremque. Repellendus soluta quos nemo quisquam consectetur temporibus
+                                    quam obcaecati sapiente quaerat et.
+                                </p>
+                                <h4>Oliver Bradley</h4>
+                                <small>
+                                    Company name
+                                </small>
+                            </div>
                         </div>
-                        <div class="feedback__carousel-item__content__text">
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda corporis deleniti
-                                praesentium doloremque. Repellendus soluta quos nemo quisquam consectetur temporibus
-                                quam obcaecati sapiente quaerat et.
-                            </p>
-                            <h4>William James</h4>
-                            <small>
-                                Company name
-                            </small>
+                    </div>
+                    <div class="carousel-item">
+                        <div feedback__carousel-item__content>
+                            <i class="fa-solid fa-quote-left"></i>
+                            <div class="feedback__carousel-item__content__img">
+                                <img src="./access/image/team6.jpg" class="d-block w-100" alt="error">
+                            </div>
+                            <div class="feedback__carousel-item__content__text">
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda corporis deleniti
+                                    praesentium doloremque. Repellendus soluta quos nemo quisquam consectetur temporibus
+                                    quam obcaecati sapiente quaerat et.
+                                </p>
+                                <h4>William James</h4>
+                                <small>
+                                    Company name
+                                </small>
+                            </div>
                         </div>
                     </div>
                 </div>
