--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="./access/css/style.css">
 </head>
 
-<body style="height: 5000px;">
+<body>
     <!--=====================================
     =                General                =
     ======================================-->
