--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <title>MasterWork</title>
 </head>
 
-<body>
+<body style="height: 5000px">
     <header class="main-header fixed-top">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
@@ -446,15 +446,16 @@
             </div>
         </div>
         <div class="feedback__content">
-            <div id="carouselFeedbackIndicators" class="carousel slide" data-ride="carousel">
+            <div id="carouselFeedback" class="carousel slide carouselFeedback--edit" data-ride="carousel" data-interval="false">
                 <ol class="carousel-indicators">
-                    <li data-target="#carouselFeedbackIndicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselFeedbackIndicators" data-slide-to="1"></li>
-                    <li data-target="#carouselFeedbackIndicators" data-slide-to="2"></li>
+                    <li data-target="#carouselFeedback" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselFeedback" data-slide-to="1"></li>
+                    <li data-target="#carouselFeedback" data-slide-to="2"></li>
+                    <li data-target="#carouselFeedback" data-slide-to="3"></li>
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <div feedback__carousel-item__content>
+                        <div class="feedback__carousel-item__content">
                             <i class="fa-solid fa-quote-left"></i>
                             <div class="feedback__carousel-item__content__img">
                                 <img src="./access/image/team3.jpg" class="img-fluid" alt="error">
@@ -475,7 +476,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div feedback__carousel-item__content>
+                        <div class="feedback__carousel-item__content">
                             <i class="fa-solid fa-quote-left"></i>
                             <div class="feedback__carousel-item__content__img">
                                 <img src="./access/image/team4.jpg" class="d-block w-100" alt="error">
@@ -496,7 +497,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div feedback__carousel-item__content>
+                        <div class="feedback__carousel-item__content">
                             <i class="fa-solid fa-quote-left"></i>
                             <div class="feedback__carousel-item__content__img">
                                 <img src="./access/image/team5.jpg" class="d-block w-100" alt="error">
@@ -515,7 +516,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div feedback__carousel-item__content>
+                        <div class="feedback__carousel-item__content">
                             <i class="fa-solid fa-quote-left"></i>
                             <div class="feedback__carousel-item__content__img">
                                 <img src="./access/image/team6.jpg" class="d-block w-100" alt="error">
