--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <!-- owlcarousel -->
+    <link rel="stylesheet" href="./access/css/owlcarousel/owl.carousel.min.css">
+    <link rel="stylesheet" href="./access/css/owlcarousel/owl.theme.default.min.css">
     <!-- main css -->
     <link rel="stylesheet" href="./access/css/style.css">
     <title>MasterWork</title>
@@ -446,92 +449,84 @@
             </div>
         </div>
         <div class="feedback__content">
-            <div id="carouselFeedback" class="carousel slide carouselFeedback--edit" data-ride="carousel" data-interval="false">
-                <ol class="carousel-indicators">
-                    <li data-target="#carouselFeedback" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselFeedback" data-slide-to="1"></li>
-                    <li data-target="#carouselFeedback" data-slide-to="2"></li>
-                    <li data-target="#carouselFeedback" data-slide-to="3"></li>
-                </ol>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <div class="feedback__carousel-item__content">
-                            <i class="fa-solid fa-quote-left"></i>
-                            <div class="feedback__carousel-item__content__img">
-                                <img src="./access/image/team3.jpg" class="img-fluid" alt="error">
-                            </div>
-                            <div class="feedback__carousel-item__content__text">
-                                <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda corporis deleniti
-                                    praesentium doloremque. Repellendus soluta quos nemo quisquam consectetur temporibus
-                                    quam obcaecati sapiente quaerat et.
-                                </p>
-                                <h4>
-                                    Isabella Mia
-                                </h4>
-                                <small>
-                                    Company name
-                                </small>
-                            </div>
+            <div class="owl-carousel owl-theme">
+                <div class="item">
+                    <div class="feedback__carousel-item__content">
+                        <div class="feedback__carousel-item__content__img">
+                            <img src="./access/image/team3.jpg" class="img-fluid" alt="error">
+                        </div>
+                        <div class="feedback__carousel-item__content__text">
+                            <p>
+                                <i class="fa-solid fa-quote-left"></i>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda corporis deleniti
+                                praesentium doloremque. Repellendus soluta quos nemo quisquam consectetur temporibus
+                                quam obcaecati sapiente quaerat et.
+                            </p>
+                            <h4>
+                                Isabella Mia
+                            </h4>
+                            <small>
+                                Company name
+                            </small>
                         </div>
                     </div>
-                    <div class="carousel-item">
-                        <div class="feedback__carousel-item__content">
-                            <i class="fa-solid fa-quote-left"></i>
-                            <div class="feedback__carousel-item__content__img">
-                                <img src="./access/image/team4.jpg" class="d-block w-100" alt="error">
-                            </div>
-                            <div class="feedback__carousel-item__content__text">
-                                <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda corporis deleniti
-                                    praesentium doloremque. Repellendus soluta quos nemo quisquam consectetur temporibus
-                                    quam obcaecati sapiente quaerat et.
-                                </p>
-                                <h4>
-                                    Benjamin Lucas
-                                </h4>
-                                <small>
-                                    Company name
-                                </small>
-                            </div>
+                </div>
+                <div class="item">
+                    <div class="feedback__carousel-item__content">
+                        <div class="feedback__carousel-item__content__img">
+                            <img src="./access/image/team4.jpg" class="d-block w-100" alt="error">
+                        </div>
+                        <div class="feedback__carousel-item__content__text">
+                            <p>
+                                <i class="fa-solid fa-quote-left"></i>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda corporis deleniti
+                                praesentium doloremque. Repellendus soluta quos nemo quisquam consectetur temporibus
+                                quam obcaecati sapiente quaerat et.
+                            </p>
+                            <h4>
+                                Benjamin Lucas
+                            </h4>
+                            <small>
+                                Company name
+                            </small>
                         </div>
                     </div>
-                    <div class="carousel-item">
-                        <div class="feedback__carousel-item__content">
-                            <i class="fa-solid fa-quote-left"></i>
-                            <div class="feedback__carousel-item__content__img">
-                                <img src="./access/image/team5.jpg" class="d-block w-100" alt="error">
-                            </div>
-                            <div class="feedback__carousel-item__content__text">
-                                <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda corporis deleniti
-                                    praesentium doloremque. Repellendus soluta quos nemo quisquam consectetur temporibus
-                                    quam obcaecati sapiente quaerat et.
-                                </p>
-                                <h4>Oliver Bradley</h4>
-                                <small>
-                                    Company name
-                                </small>
-                            </div>
+                </div>
+                <div class="item">
+                    <div class="feedback__carousel-item__content">
+                        <div class="feedback__carousel-item__content__img">
+                            <img src="./access/image/team5.jpg" class="d-block w-100" alt="error">
+                        </div>
+                        <div class="feedback__carousel-item__content__text">
+                            <p>
+                                <i class="fa-solid fa-quote-left"></i>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda corporis deleniti
+                                praesentium doloremque. Repellendus soluta quos nemo quisquam consectetur temporibus
+                                quam obcaecati sapiente quaerat et.
+                            </p>
+                            <h4>Oliver Bradley</h4>
+                            <small>
+                                Company name
+                            </small>
                         </div>
                     </div>
-                    <div class="carousel-item">
-                        <div class="feedback__carousel-item__content">
-                            <i class="fa-solid fa-quote-left"></i>
-                            <div class="feedback__carousel-item__content__img">
-                                <img src="./access/image/team6.jpg" class="d-block w-100" alt="error">
-                            </div>
-                            <div class="feedback__carousel-item__content__text">
-                                <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda corporis deleniti
-                                    praesentium doloremque. Repellendus soluta quos nemo quisquam consectetur temporibus
-                                    quam obcaecati sapiente quaerat et.
-                                </p>
-                                <h4>William James</h4>
-                                <small>
-                                    Company name
-                                </small>
-                            </div>
+                </div>
+                <div class="item">
+                    <div class="feedback__carousel-item__content">
+                        <div class="feedback__carousel-item__content__img">
+                            <img src="./access/image/team6.jpg" class="d-block w-100" alt="error">
+                        </div>
+                        <div class="feedback__carousel-item__content__text">
+                            <p>
+                                <i class="fa-solid fa-quote-left"></i>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda corporis deleniti
+                                praesentium doloremque. Repellendus soluta quos nemo quisquam consectetur temporibus
+                                quam obcaecati sapiente quaerat et.
+                            </p>
+                            <h4>William James</h4>
+                            <small>
+                                Company name
+                            </small>
                         </div>
                     </div>
                 </div>
@@ -543,13 +538,96 @@
     <!--=====================================
     =                Build                =
     ======================================-->
-    <section class="build"></section>
+    <section class="build">
+        <div class="container">
+            <div class="__title">
+                <h2>Ready to build your own brand community? </h2>
+                <p>
+                    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla mollis
+                    dapibus nunc, ut rhoncus turpis sodales quis. Integer sit amet mattis quam.
+                </p>
+            </div>
+            <div class="buttons">
+                <a href="#" class="btn btn-outline-primary theme-button">Book a Demo</a>
+                <a href="#" class="btn btn-primary theme-button">Get Started</a>
+            </div>
+        </div>
+    </section>
     <!--=======  End of Build  ========-->
     <!--=====================================
     =                Footer                =
     ======================================-->
-    <footer></footer>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="footer-item">
+                        <h3>Meta</h3>
+                        <ul>
+                            <li><a href="#">Log In</a></li>
+                            <li><a href="#">Entries feed</a></li>
+                            <li><a href="#">Comments feed</a></li>
+                            <li><a href="#">WordPress.org</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="footer-item">
+                        <h3>Categories</h3>
+                        <ul>
+                            <li><a href="#">Business</a></li>
+                            <li><a href="#">Design</a></li>
+                            <li><a href="#">Industry</a></li>
+                            <li><a href="#">Programming</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="footer-item">
+                        <h3>Archives</h3>
+                        <ul>
+                            <li><a href="#">March 2021</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="footer-last-item">
+                        <h3>Newsletter</h3>
+                        <p>Get latest updates and offers.</p>
+                        <form class="form-inline">
+                            <div class="form-group mx-sm-3 mb-2">
+                                <input type="email" class="form-control" placeholder="Email Address">
+                            </div>
+                            <button type="submit" class="btn btn-primary mb-2">Go</button>
+                        </form>
+                        <p>Sign up for our latest news & articles. We won’t give you spam mails.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="below-section">
+                <div class="columns text-lg-left text-center">
+                    <p class="copyrights">
+                        © 2023 Masterwork. All Rights Reserved | WordPress Theme by
+                        <a href="#">W3Layouts.</a>
+                    </p>
+                </div>
+                <div class="columns-2 mt-lg-0 mt-3">
+                    <ul class="social">
+                        <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-google-plus-g"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
     <!--=======  End of Footer  ========-->
+    <!-- jquery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"
+        integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -557,6 +635,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
         crossorigin="anonymous"></script>
+    <!-- owlcarousel -->
+    <script src="./js/owlcarousel/owl.carousel.min.js"></script>
     <!-- main js -->
     <script src="./js/main.js"></script>
 </body>
