--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div class="DarkandLight DarkandLight-mobile">
                     <div class="mode-container">
                         <!-- <i class="fa-solid fa-sun-bright"></i> -->
-                        <i class="gg-moon"></i>
+                        <i id="moon" class="gg-moon"></i>
                     </div>
                 </div>
             </nav>
