--- a/index.html
+++ b/index.html
@@ -188,8 +188,7 @@
             </div>
         </div>
     </section>
-
-        <!-- NUMBER COUNT UP  -->
+    <!-- NUMBER COUNT UP  -->
     <section class="number">
         <div class="container">
             <div class="row number-content justify-content-center">
@@ -217,8 +216,6 @@
             </div>
         </div>
     </section>
-
-
     <section class="sologan">
         <div class="sologan-box">
             <div class="container">
@@ -227,7 +224,9 @@
                         We are true to ourselves, and commit to always perform at our best.
                     </h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, doloribus atque. Corrupti exercitationem voluptatem ipsum iste consequuntur et vitae voluptas temporibus? Maxime dolores amet voluptatum illo consequatur placeat fugit ducimus.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, doloribus atque.
+                        Corrupti exercitationem voluptatem ipsum iste consequuntur et vitae voluptas temporibus? Maxime
+                        dolores amet voluptatum illo consequatur placeat fugit ducimus.
                     </p>
                     <a href="#url" class="btn theme-btn btnSologan">
                         READ MORE
@@ -686,16 +685,12 @@
         crossorigin="anonymous"></script>
     <!-- owlcarousel -->
     <script src="./js/owlcarousel/owl.carousel.min.js"></script>
-
-        <!-- JQUERY  -->
-
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.js"></script>
-        <script src="/js/jquery.countup.js"></script>
-        <script>
-            $('.counter').countUp();
-        </script>
-
-
+    <!-- JQUERY  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.js"></script>
+    <script src="/js/jquery.countup.js"></script>
+    <script>
+        $('.counter').countUp();
+    </script>
     <!-- main js -->
     <script src="./js/main.js"></script>
 </body>
