--- a/index.html
+++ b/index.html
@@ -598,8 +598,8 @@
                 </p>
             </div>
             <div class="buttons">
-                <a href="#" class="btn btn-outline-primary theme-button">Book a Demo</a>
-                <a href="#" class="btn btn-primary theme-button">Get Started</a>
+                <a href="#url" class="btn btn-outline-primary theme-button">Book a Demo</a>
+                <a href="#url" class="btn btn-primary theme-button">Get Started</a>
             </div>
         </div>
     </section>
