fix bug by Cong Nhut

--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
                                         necessitatibus
                                         consectetur modi ipsum natus accusantium sit pariatur.
                                     </p>
-                                    <button class="btn btn-outline-primary theme-button btnSologan">
+                                    <button class="btn btn-outline-primary theme-button">
                                         Know more
                                     </button>
                                 </div>
@@ -711,13 +711,14 @@
         })
     </script>
 
-
-    <script>
-        $('.counter').countUp();
-    </script>
+<script>
+    $('.counter').countUp();
+</script>
+    
 
     <script src="./js/util.js"></script>
     <script src="./js/backToTopmain.js"></script>
+    
 
     <!-- main js -->
     <script src="./js/main.js"></script>
